# website

./: .envrc  .eslintrc.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.json  Justfile  README.md  config.toml  flake.nix  gatsby-browser.js  gatsby-config.js  gatsby-config.ts  gatsby-node.ts  graphql-types.js  package-lock.json  package.json  pyproject.toml  styles.scss  tsconfig.json
.github/workflows/: build-and-deploy.yaml  codeql-analysis.yaml
config/: gatsby-config.ts
content/: circlefactoring.md  dissertation.md  fbmcli.md  ilhaformosa.md  littlewood.md  shinybabynames.md
layouts/: 404.html  index.html
layouts/_default/: baseof.html  single.html
src/: github.graphql  slugify.ts  utils.ts
src/components/: blogpost-box.tsx  external-link.tsx  footer.tsx  github-button.tsx  header.tsx  language-button.tsx  markdown-renderer.tsx  navbar.tsx  page.tsx  project-box.tsx  project-boxes.tsx
src/interfaces/: github-readme.ts  interfaces.ts  projects.ts
src/pages/: 404.tsx  cv.tsx  index.tsx  projects.tsx
src/styles/: code-syntax.scss  global.css  global.scss
src/templates/: blog.tsx  blogpost.tsx  index.tsx  project.tsx  projects.tsx
static/css/: styles.css
static/image/littlewood-matlab/: animated.webm
website/: __init__.py  __main__.py  cli.py  constants.py  data.py  downloader.py  html.py  markdown.py  sass.py  utils.py  xml.py
